# weight-mcp

./: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  docker-compose.template.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/weight_mcp/: __init__.py  __main__.py  config.py  db.py  migrations.py  models.py  nutrition.py  oauth.py  server.py  ui.py  web.py
tests/: conftest.py  test_db.py  test_e2e_oauth.py  test_nutrition.py  test_oauth.py  test_ui.py
